--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,67 @@
-/* @import './base.css';
+@import './base.css';
+
+body{
+  background-color: var(--color-element-background-1);
+  margin: 0;
+  margin: 0 auto;
+  font-family: var(--font-secondary);
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+button,
+.houses-header,
+nav{
+  font-family: var(--font-primary);
+}
+
+h1{font-size: 32px;font-weight: 700;}
+h2{font-size: 22px;font-weight: 700;}
+
+button{
+  font-size: 18px;
+  font-weight: 700;
+}
+
+nav{
+  font-size: 18px;
+  font-weight: 700;
+}
+
 
 #app {
-  max-width: 1280px;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: white;
+  padding: 0.9rem 0;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+}
+
+.stable-header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3rem;
   margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  max-width: 68vw; 
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+.logo-link img{
+  height: 2.2rem;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+nav {
+  display: flex;
+  gap: 3rem;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-} */
+main{
+  margin: 0 auto;
+  max-width: 68vw;
+  padding: 1rem;
+}
