--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,17 @@
 @import './base.css';
 
+
 body{
   background-color: var(--color-element-background-1);
   margin: 0;
   margin: 0 auto;
   font-family: var(--font-secondary);
   font-weight: 400;
+  min-height: 100vh;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 h1,
@@ -29,6 +35,17 @@ nav{
   font-size: 18px;
   font-weight: 700;
 }
+
+@media (max-width: 431px) {
+  h1{font-size: 18px;}
+  h2{font-size: 14px;}
+
+  button{
+    font-size: 12px;
+  }
+
+}
+
 
 
 #app {
@@ -64,4 +81,21 @@ main{
   margin: 0 auto;
   max-width: 68vw;
   padding: 1rem;
+}
+
+
+
+
+@media screen and (max-width: 431px) {
+  /* body{
+    width: 100vw;
+  } */
+  main{
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    max-width: 100vw;
+    margin: 0;
+  }
+
 }
