--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,6 @@
 @import './base.css';
 
-
-body{
+body {
   background-color: var(--color-element-background-1);
   margin: 0;
   margin: 0 auto;
@@ -10,7 +9,9 @@ body{
   min-height: 100vh;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -19,34 +20,41 @@ h2,
 h3,
 button,
 .houses-header,
-nav{
+nav {
   font-family: var(--font-primary);
 }
 
-h1{font-size: 32px;font-weight: 700;}
-h2{font-size: 22px;font-weight: 700;}
+h1 {
+  font-size: 32px;
+  font-weight: 700;
+}
+h2 {
+  font-size: 22px;
+  font-weight: 700;
+}
 
-button{
+button {
   font-size: 18px;
   font-weight: 700;
 }
 
-nav{
+nav {
   font-size: 18px;
   font-weight: 700;
 }
 
 @media (max-width: 431px) {
-  h1{font-size: 18px;}
-  h2{font-size: 14px;}
-
-  button{
-    font-size: 12px;
+  h1 {
+    font-size: 18px;
+  }
+  h2 {
+    font-size: 14px;
   }
 
+  button {
+    font-size: 12px;
+  }
 }
-
-
 
 #app {
   margin: 0;
@@ -56,19 +64,19 @@ nav{
 header {
   background-color: white;
   padding: 0.9rem 0;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
 }
 
-.stable-header{
+.stable-header {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 3rem;
   margin: 0 auto;
-  max-width: 68vw; 
+  max-width: 68vw;
 }
 
-.logo-link img{
+.logo-link img {
   height: 2.2rem;
 }
 
@@ -77,25 +85,21 @@ nav {
   gap: 3rem;
 }
 
-main{
+main {
   margin: 0 auto;
   max-width: 68vw;
   padding: 1rem;
 }
 
-
-
-
 @media screen and (max-width: 431px) {
   /* body{
     width: 100vw;
   } */
-  main{
+  main {
     display: flex;
     justify-content: center;
     padding: 0;
     max-width: 100vw;
     margin: 0;
   }
-
 }
