--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -62,6 +62,9 @@ nav {
 }
 
 header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   background-color: white;
   padding: 0.9rem 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -95,6 +98,12 @@ main {
   /* body{
     width: 100vw;
   } */
+  header {
+  position: initial;
+  top: initial;
+  z-index: initial;
+  }
+
   main {
     display: flex;
     justify-content: center;
